# 3D-Image-Processing

./: README.md
BagOfWords/: CMakeLists.txt  README.md  main.cpp  small_voc.yml
fpfh_pipeline/: CMakeLists.txt  correspondence_pipeline.hpp  main.cpp  transformation.hpp
fpfh_pipeline/data_room/: Cloud0.pcd  Cloud1.pcd  Cloud2.pcd  source.pcd  target.pcd
opencv_correspondence/: CMakeLists.txt  README.md  helpers.cpp  main.cpp  para6700PCTrans.ply  pcdhelpers.cpp  source.ply  source_transformed.ply  target.ply
time_stamp_testing/1_plotting_programs/: README.md  ai.py  plot_all.py  time_stamp_variation.py  twin_plots.py
time_stamp_testing/edge_points/: CMakeLists.txt  capture_frame.h  feature_detectors.h  main.cpp  point_detectors.h
